# rootbeer

./: .gitignore  CMakeLists.txt
include/: plugins.h
plugins/: CMakeLists.txt  plugins.c  plugins.h
plugins/example_plugin/: CMakeLists.txt  example.c  example_plugin.c  example_plugin.h
plugins/example_plugin/include/: example.h
src/config/: lua_module.c  module.c
test/: test.lua
